--- a/Grupo51_TechChallenge_Fase4.ipynb
+++ b/Grupo51_TechChallenge_Fase4.ipynb
@@ -36,7 +36,8 @@
         "### **Entregáveis**\n",
         "\n",
         "- [Repositório no GitHub](https://github.com/josehelioaraujo/Grupo51_TechChallenge_Fase4)   \n",
-        "- [Video Apresentação no Youtube](coloque aqui o link)  \n",
+        "- [Videode Apresentação no Youtube](coloque aqui o link)  \n",
+        "- [Video Analisado no Youtube](https://www.youtube.com/watch?v=XQOZjYnXNM4)  \n",
         "\n",
         "\n",
         "### **Arquivos no Google Colab**\n",
@@ -8128,7 +8129,6 @@
         "* Tratamento básico de erros implementado\n",
         "* Sistema de métricas e estatísticas para análise dos resultados\n",
         "* Visualização efetiva das detecções no vídeo processado\n",
-        "* Uso adequado de tipagem de dados e docstrings\n",
         "\n",
         "\n",
         "\n",
@@ -9945,7 +9945,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1O3_h3IE6zCa2XWWScFmLnJa3SGRtrmWs",
-      "authorship_tag": "ABX9TyOU2nyPlkdq3cZvNhih0DAq",
+      "authorship_tag": "ABX9TyNBDOyt27FwhbibJXPOiuBC",
       "include_colab_link": true
     },
     "kernelspec": {
