--- a/Grupo51_TechChallenge_Fase4.ipynb
+++ b/Grupo51_TechChallenge_Fase4.ipynb
@@ -36,7 +36,8 @@
         "### **Entregáveis**\n",
         "\n",
         "- [Repositório no GitHub](https://github.com/josehelioaraujo/Grupo51_TechChallenge_Fase4)   \n",
-        "- [Videode Apresentação no Youtube](coloque aqui o link)  \n",
+        "- [Video de Apresentação no Youtube](coloque aqui o link)  \n",
+        "- [Arquivo de Video para análise](https://github.com/josehelioaraujo/Grupo51_TechChallenge_Fase4/blob/main/Unlocking_Facial_Recognition_Diverse_Activities_Analysis.mp4)\n",
         "- [Video Analisado no Youtube](https://www.youtube.com/watch?v=XQOZjYnXNM4)  \n",
         "\n",
         "\n",
@@ -45,13 +46,6 @@
         "| Descrição do Arquivo Colab | Link de acesso   |\n",
         "| ------------------------------------------------------------ |   ------------------------------------------------------------ |\n",
         "| Grupo51_TechChallenge_Fase4.ipynb | [![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1Xvd8J-hnHnkXCAXROTUwsQOx8J3YOA00#scrollTo=HmJBtZSbkwQI&uniqifier=1) |\n",
-        "\n",
-        "\n",
-        " ### **Arquivos de video utilizados na análise**\n",
-        "\n",
-        "| Arquivos de video                              | Descrição                                                  | Link de Acesso                                                  |\n",
-        "| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |\n",
-        "| Arquivo de video |Arquivo de video usado na análise | [![Arquivo on HF](https://huggingface.co/datasets/huggingface/badges/resolve/main/dataset-on-hf-sm.svg)](https://huggingface.co/datasets/helioandrade/amazon-titles-jsonl) |\n",
         "\n",
         "\n",
         "\n",
@@ -9945,7 +9939,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1O3_h3IE6zCa2XWWScFmLnJa3SGRtrmWs",
-      "authorship_tag": "ABX9TyNBDOyt27FwhbibJXPOiuBC",
+      "authorship_tag": "ABX9TyMN1D2MnSVYjoMYjqFg1Vm9",
       "include_colab_link": true
     },
     "kernelspec": {
